--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">活動内容</a></li>
-							<li><a href="generic.html">取り扱うゲーム</a></li>
-							<li><a href="elements.html">お問い合わせ</a></li>
+							<li><a href="landing.html">取り扱うゲーム</a></li>
+							<li><a href="landing.html">お問い合わせ</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Eスポーツ部に入る</a></li>
